moved test data to new folder

--- a/tests/Data/html/small_website.html
+++ b/tests/Data/html/small_website.html
@@ -2034,7 +2034,7 @@
                 </section>
                 <section class="head-main">
                     <div class="row">
-                        <div class="medium-3 large-1 columns LOGO"><a href="/"><p><img alt="Harrison Cameras" src="https://harrison-cameras.s3.eu-west-1.amazonaws.com/CMR/logo2.png" /></p>
+                        <div class="medium-3 large-1 columns LOGO"><a href="/public"><p><img alt="Harrison Cameras" src="https://harrison-cameras.s3.eu-west-1.amazonaws.com/CMR/logo2.png" /></p>
                         </a></div>
                         <div class="medium-6 show-for-large large-8 columns usp-head"><div class="medium-2 columns"><a href="/about-us/photography-gift-voucher/" target=""><img alt="Gift Vouchers" src="https://harrison-cameras.s3.amazonaws.com/CMR/Header/usp-1.png" /></a></div>
 
@@ -4314,7 +4314,7 @@
                     <div class="column">
                         <nav aria-label="You are here:">
                             <ul class="breadcrumbs">
-                                <li><a href="/">Home</a></li>
+                                <li><a href="/public">Home</a></li>
 
 
                                 <li><a href="/accessories">Accessories</a></li>
